# musicsync

./: .gitignore  CMakeLists.txt  README.md  file_manager.cpp  file_manager.hpp  filename_extractor.cpp  filename_extractor.hpp  filename_parser.cpp  filename_parser.hpp  launch.vs.json  local_files_utils.hpp  main.cpp  song.hpp  song_extractor.cpp  song_extractor.hpp  song_info.hpp  utils.hpp
include/: database.hpp  local_files_utils.hpp  song.hpp  songs_table_view.hpp  spotify_connector.hpp  utils.hpp  view.hpp
sqlite/: CMakeLists.txt
src/: database.cpp  local_files_utils.cpp  main.cpp  song.cpp  songs_table_view.cpp  spotify_connector.cpp  view.cpp
storage/: sqlite3.lib
